added picture links

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 									<ul class="nav__links">
 										<li class="nav__link"><a href="">Home</a></li>
 										<li class="nav__link">
-											<a href="">Shop</a><span class="label-top label-top--red">news</span>
+											<a href="pages/sort-product.html">Shop</a><span class="label-top label-top--red">news</span>
 											<!-- hidden menu -->
 											<div class="hidden-menu hidden-menu--big">
 												<div class="hidden-menu__content">
@@ -449,10 +449,7 @@
 				<div class="banner__slider banner-carousel owl-carousel" id="banner-slider">
 					<!-- slide -->
 					<div class="banner__slide item ibg">
-						<img
-							src="//cdn.shopify.com/s/files/1/0433/4292/1896/files/slider.01_5e2aa67b-bdc1-4034-9a0a-3e0a82d44828.png?v=1595146840"
-							alt=""
-						/>
+						<img src="assets/img/banners/slider.01_5e2aa67b-bdc1-4034-9a0a-3e0a82d44828.webp" alt="" />
 
 						<div class="container">
 							<h6 class="banner__overhead">100% Healthy & Affordable</h6>
@@ -466,7 +463,7 @@
 					</div>
 					<!-- slide -->
 					<div class="banner__slide item ibg">
-						<img src="//cdn.shopify.com/s/files/1/0433/4292/1896/files/slider.02.png?v=1595150256" alt="" />
+						<img src="assets/img/banners/slider.02.webp" alt="" />
 
 						<div class="container">
 							<h6 class="banner__overhead">100% Healthy & Affordable</h6>
@@ -488,10 +485,7 @@
 					<!-- poster item -->
 					<div class="poster__item ibg">
 						<!-- img -->
-						<img
-							src="https://cdn.shopify.com/s/files/1/0433/4292/1896/files/banner_02_7ea2283d-e0cf-4d5d-afce-d75a21523266.png?v=1595411701"
-							alt=""
-						/>
+						<img src="assets/img/banners/banner-2.webp" alt="" />
 						<!-- content -->
 						<div class="poster__content">
 							<h6 class="poster__description">Green Vegetable</h6>
@@ -503,10 +497,7 @@
 					<!-- poster item -->
 					<div class="poster__item ibg">
 						<!-- img -->
-						<img
-							src="https://cdn.shopify.com/s/files/1/0433/4292/1896/files/without-text_691d8126-35fd-4080-b3e6-c9b07da6bd4f.png?v=1595402732"
-							alt=""
-						/>
+						<img src="assets/img/banners/banner-1.png" alt="" />
 						<!-- content -->
 						<div class="poster__content">
 							<h6 class="poster__description">Green Vegetable</h6>
@@ -535,7 +526,7 @@
 								<span>2 product</span>
 							</div>
 							<div class="product__category--img">
-								<img src="https://cdn.shopify.com/s/files/1/0433/4292/1896/files/11.png?v=1595483697" alt="" />
+								<img src="assets/img/categories/eggs.png" alt="" />
 							</div>
 						</div>
 						<!-- item -->
@@ -545,7 +536,7 @@
 								<span>2 product</span>
 							</div>
 							<div class="product__category--img">
-								<img src="https://cdn.shopify.com/s/files/1/0433/4292/1896/files/09.png?v=1595484203" alt="" />
+								<img src="assets/img/categories/vegetableColl.png" alt="" />
 							</div>
 						</div>
 						<!-- item -->
@@ -555,7 +546,7 @@
 								<span>2 product</span>
 							</div>
 							<div class="product__category--img">
-								<img src="https://cdn.shopify.com/s/files/1/0433/4292/1896/files/13.png?v=1595484218" alt="" />
+								<img src="assets/img/categories/milk.png" alt="" />
 							</div>
 						</div>
 						<!-- item -->
@@ -565,7 +556,7 @@
 								<span>2 product</span>
 							</div>
 							<div class="product__category--img">
-								<img src="https://cdn.shopify.com/s/files/1/0433/4292/1896/files/14.png?v=1595484251" alt="" />
+								<img src="assets/img/categories/meat.png" alt="" />
 							</div>
 						</div>
 						<!-- item -->
@@ -575,7 +566,7 @@
 								<span>2 product</span>
 							</div>
 							<div class="product__category--img">
-								<img src="https://cdn.shopify.com/s/files/1/0433/4292/1896/files/07.png?v=1595484267" alt="" />
+								<img src="assets/img/categories/somethingGreen.png" alt="" />
 							</div>
 						</div>
 						<!-- item -->
@@ -585,7 +576,7 @@
 								<span>2 product</span>
 							</div>
 							<div class="product__category--img">
-								<img src="https://cdn.shopify.com/s/files/1/0433/4292/1896/files/12.png?v=1595484284" alt="" />
+								<img src="assets/img/categories/cola.png" alt="" />
 							</div>
 						</div>
 						<!-- item -->
@@ -595,7 +586,7 @@
 								<span>2 product</span>
 							</div>
 							<div class="product__category--img">
-								<img src="https://cdn.shopify.com/s/files/1/0433/4292/1896/files/02..png?v=1595484309" alt="" />
+								<img src="assets/img/categories/carrot.png" alt="" />
 							</div>
 						</div>
 						<!-- item -->
@@ -605,7 +596,7 @@
 								<span>2 product</span>
 							</div>
 							<div class="product__category--img">
-								<img src="https://cdn.shopify.com/s/files/1/0433/4292/1896/files/04.png?v=1595484375" alt="" />
+								<img src="assets/img/categories/bag.png" alt="" />
 							</div>
 						</div>
 						<!-- item -->
@@ -615,7 +606,7 @@
 								<span>2 product</span>
 							</div>
 							<div class="product__category--img">
-								<img src="https://cdn.shopify.com/s/files/1/0433/4292/1896/files/06.png?v=1595484388" alt="" />
+								<img src="assets/img/categories/mushrooms.png" alt="" />
 							</div>
 						</div>
 						<!-- item -->
@@ -625,7 +616,7 @@
 								<span>2 product</span>
 							</div>
 							<div class="product__category--img">
-								<img src="https://cdn.shopify.com/s/files/1/0433/4292/1896/files/10.png?v=1595484236" alt="" />
+								<img src="assets/img/categories/fries.png" alt="" />
 							</div>
 						</div>
 					</div>
@@ -651,11 +642,7 @@
 								<div class="card__top">
 									<!-- img -->
 									<a href="" class="card__top--link">
-										<img
-											src="https://cdn.shopify.com/s/files/1/0433/4292/1896/products/product_01_large.png?v=1595470615"
-											alt=""
-											class="card__img"
-										/>
+										<img src="assets/img/product/card img/product_01_large.png" alt="" class="card__img" />
 									</a>
 
 									<!-- sale label -->
@@ -694,11 +681,7 @@
 								<!-- card top -->
 								<div class="card__top">
 									<a href="">
-										<img
-											src="https://cdn.shopify.com/s/files/1/0433/4292/1896/products/product_11_115338e8-be09-4db9-9bb1-dde200a4a233_large.png?v=1595474651"
-											alt=""
-											class="card__img"
-										/>
+										<img src="assets/img/product/card img/product_02_large.png" alt="" class="card__img" />
 									</a>
 
 									<!-- sale label -->
@@ -742,11 +725,7 @@
 								<div class="card__top">
 									<!-- img -->
 									<a href="" class="card__top--link">
-										<img
-											src="https://cdn.shopify.com/s/files/1/0433/4292/1896/products/product_08_1adc9b32-2cf8-42d9-b600-dc67d7584966_large.png?v=1595472621"
-											alt=""
-											class="card__img"
-										/>
+										<img src="assets/img/product/card img/product_03_large.png" alt="" class="card__img" />
 									</a>
 
 									<!-- sale label -->
@@ -786,11 +765,7 @@
 								<!-- card top -->
 								<div class="card__top">
 									<a href="">
-										<img
-											src="https://cdn.shopify.com/s/files/1/0433/4292/1896/products/product_06_9765abfa-f3d1-41e4-80b8-6a12656fa0d4_large.png?v=1595472413"
-											alt=""
-											class="card__img"
-										/>
+										<img src="assets/img/product/card img/product_04_large.png" alt="" class="card__img" />
 									</a>
 
 									<!-- sale label -->
@@ -834,11 +809,7 @@
 								<div class="card__top">
 									<!-- img -->
 									<a href="" class="card__top--link">
-										<img
-											src="https://cdn.shopify.com/s/files/1/0433/4292/1896/products/product_10_02a3751c-1377-4567-9bdb-aad6109b9853_large.png?v=1595474000"
-											alt=""
-											class="card__img"
-										/>
+										<img src="assets/img/product/card img/product_05_large.png" alt="" class="card__img" />
 									</a>
 
 									<!-- sale label -->
@@ -878,11 +849,7 @@
 								<!-- card top -->
 								<div class="card__top">
 									<a href="">
-										<img
-											src="https://cdn.shopify.com/s/files/1/0433/4292/1896/products/product_09_5afce031-f891-4883-9cbb-d8483737546a_large.png?v=1595473665"
-											alt=""
-											class="card__img"
-										/>
+										<img src="assets/img/product/card img/product_06_large.png" alt="" class="card__img" />
 									</a>
 
 									<!-- sale label -->
@@ -926,11 +893,7 @@
 								<div class="card__top">
 									<!-- img -->
 									<a href="" class="card__top--link">
-										<img
-											src="https://cdn.shopify.com/s/files/1/0433/4292/1896/products/product_04_4711397c-6391-4977-82ed-dc11a986f04a_large.png?v=1595472196"
-											alt=""
-											class="card__img"
-										/>
+										<img src="assets/img/product/card img/product_07_large.png" alt="" class="card__img" />
 									</a>
 
 									<!-- sale label -->
@@ -970,11 +933,7 @@
 								<!-- card top -->
 								<div class="card__top">
 									<a href="">
-										<img
-											src="https://cdn.shopify.com/s/files/1/0433/4292/1896/products/product_05_2218047d-f64c-4a52-8ed5-5692de2a88fd_large.png?v=1595472336"
-											alt=""
-											class="card__img"
-										/>
+										<img src="assets/img/product/card img/product_08_large.png" alt="" class="card__img" />
 									</a>
 
 									<!-- sale label -->
@@ -1018,11 +977,7 @@
 								<div class="card__top">
 									<!-- img -->
 									<a href="" class="card__top--link">
-										<img
-											src="https://cdn.shopify.com/s/files/1/0433/4292/1896/products/product_10_02a3751c-1377-4567-9bdb-aad6109b9853_large.png?v=1595474000"
-											alt=""
-											class="card__img"
-										/>
+										<img src="assets/img/product/card img/product_09_large.png" alt="" class="card__img" />
 									</a>
 
 									<!-- sale label -->
@@ -1062,11 +1017,7 @@
 								<!-- card top -->
 								<div class="card__top">
 									<a href="">
-										<img
-											src="https://cdn.shopify.com/s/files/1/0433/4292/1896/products/product_09_5afce031-f891-4883-9cbb-d8483737546a_large.png?v=1595473665"
-											alt=""
-											class="card__img"
-										/>
+										<img src="assets/img/product/card img/product_01_large.png" alt="" class="card__img" />
 									</a>
 
 									<!-- sale label -->
@@ -1110,11 +1061,7 @@
 								<div class="card__top">
 									<!-- img -->
 									<a href="" class="card__top--link">
-										<img
-											src="https://cdn.shopify.com/s/files/1/0433/4292/1896/products/product_08_1adc9b32-2cf8-42d9-b600-dc67d7584966_large.png?v=1595472621"
-											alt=""
-											class="card__img"
-										/>
+										<img src="assets/img/product/card img/product_02_large.png" alt="" class="card__img" />
 									</a>
 
 									<!-- sale label -->
@@ -1154,11 +1101,7 @@
 								<!-- card top -->
 								<div class="card__top">
 									<a href="">
-										<img
-											src="https://cdn.shopify.com/s/files/1/0433/4292/1896/products/product_14_large.png?v=1595474846"
-											alt=""
-											class="card__img"
-										/>
+										<img src="assets/img/product/card img/product_03_large.png" alt="" class="card__img" />
 									</a>
 
 									<!-- sale label -->
@@ -1200,10 +1143,7 @@
 
 			<!-- banner -->
 			<section class="banner m-t-100 ibg">
-				<img
-					src="//cdn.shopify.com/s/files/1/0433/4292/1896/files/call-to-action_da442fd4-4f06-43a5-8e5e-2ddcb8dd23f3.png?v=1595487685"
-					alt=""
-				/>
+				<img src="assets/img/banners/call-to-action.webp" alt="" />
 				<div class="banner__container container">
 					<h6 class="banner__overhead">SPECIAL DISCOUNT</h6>
 					<h1 class="banner__title">For All Grocery <br />Products</h1>
@@ -1231,11 +1171,7 @@
 								<div class="card__top">
 									<!-- img -->
 									<a href="" class="card__top--link">
-										<img
-											src="https://cdn.shopify.com/s/files/1/0433/4292/1896/products/product_01_large.png?v=1595470615"
-											alt=""
-											class="card__img"
-										/>
+										<img src="assets/img/product/card img/product_04_large.png" alt="" class="card__img" />
 									</a>
 
 									<!-- sale label -->
@@ -1279,11 +1215,7 @@
 								<div class="card__top">
 									<!-- img -->
 									<a href="" class="card__top--link">
-										<img
-											src="https://cdn.shopify.com/s/files/1/0433/4292/1896/products/product_08_1adc9b32-2cf8-42d9-b600-dc67d7584966_large.png?v=1595472621"
-											alt=""
-											class="card__img"
-										/>
+										<img src="assets/img/product/card img/product_05_large.png" alt="" class="card__img" />
 									</a>
 
 									<!-- sale label -->
@@ -1327,11 +1259,7 @@
 								<div class="card__top">
 									<!-- img -->
 									<a href="" class="card__top--link">
-										<img
-											src="https://cdn.shopify.com/s/files/1/0433/4292/1896/products/product_06_9765abfa-f3d1-41e4-80b8-6a12656fa0d4_large.png?v=1595472413"
-											alt=""
-											class="card__img"
-										/>
+										<img src="assets/img/product/card img/product_06_large.png" alt="" class="card__img" />
 									</a>
 
 									<!-- sale label -->
@@ -1375,11 +1303,7 @@
 								<div class="card__top">
 									<!-- img -->
 									<a href="" class="card__top--link">
-										<img
-											src="https://cdn.shopify.com/s/files/1/0433/4292/1896/products/product_04_4711397c-6391-4977-82ed-dc11a986f04a_large.png?v=1595472196"
-											alt=""
-											class="card__img"
-										/>
+										<img src="assets/img/product/card img/product_07_large.png" alt="" class="card__img" />
 									</a>
 
 									<!-- sale label -->
@@ -1423,11 +1347,7 @@
 								<div class="card__top">
 									<!-- img -->
 									<a href="" class="card__top--link">
-										<img
-											src="https://cdn.shopify.com/s/files/1/0433/4292/1896/products/product_10_02a3751c-1377-4567-9bdb-aad6109b9853_large.png?v=1595474000"
-											alt=""
-											class="card__img"
-										/>
+										<img src="assets/img/product/card img/product_08_large.png" alt="" class="card__img" />
 									</a>
 
 									<!-- sale label -->
@@ -1471,11 +1391,7 @@
 								<div class="card__top">
 									<!-- img -->
 									<a href="" class="card__top--link">
-										<img
-											src="https://cdn.shopify.com/s/files/1/0433/4292/1896/products/product_05_2218047d-f64c-4a52-8ed5-5692de2a88fd_large.png?v=1595472336"
-											alt=""
-											class="card__img"
-										/>
+										<img src="assets/img/product/card img/product_09_large.png" alt="" class="card__img" />
 									</a>
 
 									<!-- sale label -->
@@ -1519,11 +1435,7 @@
 								<div class="card__top">
 									<!-- img -->
 									<a href="" class="card__top--link">
-										<img
-											src="https://cdn.shopify.com/s/files/1/0433/4292/1896/products/product_09_5afce031-f891-4883-9cbb-d8483737546a_large.png?v=1595473665"
-											alt=""
-											class="card__img"
-										/>
+										<img src="assets/img/product/card img/product_01_large.png" alt="" class="card__img" />
 									</a>
 
 									<!-- sale label -->
@@ -1565,7 +1477,7 @@
 
 			<!-- centered-banner -->
 			<section class="centered-banner m-t-100 ibg">
-				<img src="//cdn.shopify.com/s/files/1/0433/4292/1896/files/testimonials.png?v=1595485492" alt="" />
+				<img src="assets/img/banners/testimonials.webp" alt="" />
 				<!-- testimonials content -->
 				<div class="centered-banner__content container">
 					<!-- testimonials title -->
@@ -1615,11 +1527,7 @@
 						<div class="product__slide">
 							<!-- card -->
 							<div class="news-card">
-								<a class="news-card__img"
-									><img
-										src="https://cdn.shopify.com/s/files/1/0433/4292/1896/articles/blog_04_1024x1024.png?v=1595485092"
-										alt=""
-								/></a>
+								<a class="news-card__img"><img src="assets/img/news/blog_01_1024x1024.png" alt="" /></a>
 								<!-- news-card description -->
 								<div class="news-card__desc">
 									<a href="" class="news-card__title">Consectetur adipisicing</a>
@@ -1638,11 +1546,7 @@
 						<div class="product__slide">
 							<!-- card -->
 							<div class="news-card">
-								<a class="news-card__img"
-									><img
-										src="https://cdn.shopify.com/s/files/1/0433/4292/1896/articles/blog_01_1024x1024.png?v=1595484655"
-										alt=""
-								/></a>
+								<a class="news-card__img"><img src="assets/img/news/blog_02_1024x1024.png" alt="" /></a>
 								<!-- news-card description -->
 								<div class="news-card__desc">
 									<a href="" class="news-card__title">Consectetur adipisicing</a>
@@ -1661,11 +1565,7 @@
 						<div class="product__slide">
 							<!-- card -->
 							<div class="news-card">
-								<a class="news-card__img"
-									><img
-										src="https://cdn.shopify.com/s/files/1/0433/4292/1896/articles/blog_02_1024x1024.png?v=1595484977"
-										alt=""
-								/></a>
+								<a class="news-card__img"><img src="assets/img/news/blog_03_1024x1024.png" alt="" /></a>
 								<!-- news-card description -->
 								<div class="news-card__desc">
 									<a href="" class="news-card__title">Consectetur adipisicing</a>
@@ -1684,11 +1584,7 @@
 						<div class="product__slide">
 							<!-- card -->
 							<div class="news-card">
-								<a class="news-card__img"
-									><img
-										src="https://cdn.shopify.com/s/files/1/0433/4292/1896/articles/blog_03_1024x1024.png?v=1595485008"
-										alt=""
-								/></a>
+								<a class="news-card__img"><img src="assets/img/news/blog_04_1024x1024.png" alt="" /></a>
 								<!-- news-card description -->
 								<div class="news-card__desc">
 									<a href="" class="news-card__title">Consectetur adipisicing</a>
@@ -1707,11 +1603,7 @@
 						<div class="product__slide">
 							<!-- card -->
 							<div class="news-card">
-								<a class="news-card__img"
-									><img
-										src="https://cdn.shopify.com/s/files/1/0433/4292/1896/articles/blog_01_1024x1024.png?v=1595484655"
-										alt=""
-								/></a>
+								<a class="news-card__img"><img src="assets/img/news/blog_01_1024x1024.png" alt="" /></a>
 								<!-- news-card description -->
 								<div class="news-card__desc">
 									<a href="" class="news-card__title">Consectetur adipisicing</a>
@@ -1732,10 +1624,7 @@
 
 			<!-- centered-banner -->
 			<section class="centered-banner m-t-100 ibg">
-				<img
-					src="//cdn.shopify.com/s/files/1/0433/4292/1896/files/newsletter_a00169f3-55e8-47fd-b741-2c0826a81a56.png?v=1595489375"
-					alt=""
-				/>
+				<img src="assets/img/banners/newsletter.webp" alt="" />
 				<div class="centered-banner__content container">
 					<h2 class="centered-banner__title">Subscribe To Our Newsletter</h2>
 					<!-- form -->
@@ -1856,7 +1745,7 @@
 		</div>
 
 		<!-- plugins -->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+		<script src="assets/js/plugins/jquery-3.6.0.min.js"></script>
 		<script src="assets/js/plugins/owl.carousel.min.js"></script>
 		<script src="https://kit.fontawesome.com/c688a209dc.js" crossorigin="anonymous"></script>
 		<!-- scripts -->
