--- a/pages/sort-product.html
+++ b/pages/sort-product.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>Gsone/Sort-Product</title>
 		<!-- fonts -->
 		<link rel="preconnect" href="https://fonts.gstatic.com" />
 		<link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
@@ -579,7 +579,7 @@
 							</div>
 							<!-- sort-box item -->
 							<div class="sort-box__item">
-								<span>Showing 1 - 9 of 12 result</span>
+								<span>Showing 1 - 6 of 12 result</span>
 							</div>
 						</div>
 						<!-- sort box end-->
@@ -620,8 +620,8 @@
 										<a href="" class="card__description">Fresh green vegetable</a>
 										<!-- card price -->
 										<div class="card__price">
-											<div class="card__price--current">$19.00</div>
-											<strike class="card__price--old">$29.00</strike>
+											<div class="card__price--current">120 сом</div>
+											<strike class="card__price--old">250 сом</strike>
 										</div>
 										<!-- card text -->
 										<div class="card__text">
@@ -678,8 +678,8 @@
 										<a href="" class="card__description">Fresh green vegetable</a>
 										<!-- card price -->
 										<div class="card__price">
-											<div class="card__price--current">$19.00</div>
-											<strike class="card__price--old">$29.00</strike>
+											<div class="card__price--current">240 сом</div>
+											<strike class="card__price--old">440 сом</strike>
 										</div>
 										<!-- card text -->
 										<div class="card__text">
@@ -736,8 +736,8 @@
 										<a href="" class="card__description">Fresh green vegetable</a>
 										<!-- card price -->
 										<div class="card__price">
-											<div class="card__price--current">$19.00</div>
-											<strike class="card__price--old">$29.00</strike>
+											<div class="card__price--current">320 сом</div>
+											<strike class="card__price--old">440 сом</strike>
 										</div>
 										<!-- card text -->
 										<div class="card__text">
@@ -794,8 +794,8 @@
 										<a href="" class="card__description">Fresh green vegetable</a>
 										<!-- card price -->
 										<div class="card__price">
-											<div class="card__price--current">$19.00</div>
-											<strike class="card__price--old">$29.00</strike>
+											<div class="card__price--current">30 сом</div>
+											<strike class="card__price--old">70 сом</strike>
 										</div>
 										<!-- card text -->
 										<div class="card__text">
@@ -852,8 +852,8 @@
 										<a href="" class="card__description">Fresh green vegetable</a>
 										<!-- card price -->
 										<div class="card__price">
-											<div class="card__price--current">$19.00</div>
-											<strike class="card__price--old">$29.00</strike>
+											<div class="card__price--current">430 сом</div>
+											<strike class="card__price--old">432 сом</strike>
 										</div>
 										<!-- card text -->
 										<div class="card__text">
@@ -910,8 +910,8 @@
 										<a href="" class="card__description">Fresh green vegetable</a>
 										<!-- card price -->
 										<div class="card__price">
-											<div class="card__price--current">$19.00</div>
-											<strike class="card__price--old">$29.00</strike>
+											<div class="card__price--current">40 сом</div>
+											<strike class="card__price--old">55 сом</strike>
 										</div>
 										<!-- card text -->
 										<div class="card__text">
